버튼 스타일 통일
input submit, input button, a 태그 등 다양하게 이루어지던 버튼들에게 동일한 클래스를 줬다.
form 안에 있는 input의 경우에는 form과 input 둘다에게 클래스를 줘야 display를 원하는대로 바꿀 수 있었다.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-p, input, ul {
+p, ul {
 	padding:10px;
 }
 
@@ -132,4 +132,17 @@ h1 {
     left: 40px;
     bottom: 5px;
     
+}
+
+.btn {
+	display:inline;
+	color:green;
+	background-color: inherit;
+	border: 0;
+	-webkit-appearance: none;
+	font-family: inherit;
+	font-size: inherit;
+	font-style: italic;
+	padding: 0 6px;
+	cursor: pointer;
 }
