--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ h1 {
 	padding:30px;
 	margin:0;
 	display:block;
-	font-size: 26px;
 	text-align: center;
     font-family: 'Noto Sans KR';
 }
@@ -145,4 +144,24 @@ h1 {
 	font-style: italic;
 	padding: 0 6px;
 	cursor: pointer;
+}
+
+
+input[type="text"], textarea {
+	font-size: 1.5rem;
+	width: 1100px;
+	padding: 20px;
+}
+
+textarea {
+	height: 200px;
+}
+
+
+.article p {
+	padding-left: 50px;
+}
+
+.right {
+	float:right;
 }
