뜻 영역에 출처란생성
- 뜻을 만들 때 출처를 함께 적을 수 있다.
- p태그 디자인이 article 안의 p에 적용되도록 변경됨. 단어, 의미를 생성, 수정하는 페이지에서는 영향력이 없게 했다.

--- a/style.css
+++ b/style.css
@@ -2,9 +2,6 @@ p, ul {
 	padding:10px;
 }
 
-p {
-	text-indent:4%;
-}
 
 
 
@@ -163,9 +160,17 @@ textarea {
 }
 
 
+
+
 article p {
 	padding-left: 50px;
+	text-indent:4%;
+
 }
+
+/*lable {
+	font-weight: bold;
+}*/
 
 .right {
 	text-align: right;
@@ -174,3 +179,4 @@ article p {
 .bottom_of_meaning {
 	margin-top: 20px;
 }
+
