--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ h2 {
 	text-indent: 14px;
 }
 
-#word, .meaning {
+#word, article {
 	margin:2%;
 }
 #word {
@@ -81,9 +81,9 @@ h2 {
 
 	box-sizing: border-box;
 
-	box-shadow: 2px 3px 5px powderblue;
+	box-shadow: 1px 3px 5px powderblue;
 }
-.meaning {
+article {
 
 	font-family: 'Noto Sans KR';
 
@@ -103,10 +103,10 @@ h2 {
     background-color: #fff;
 	background-image:
 	linear-gradient(90deg, transparent 13%, #abced4 13%, #abced4 13.1%, transparent 13.1%),
-	linear-gradient(#eee .08em, transparent .08em);
+	linear-gradient(#eee .1em, transparent .1em);
 	background-size: 100% 1.5em;
 
-	box-shadow: 2px 3px 8px hsla(0, 0%, 0%, 0.2);
+	box-shadow: 1px 1px 4px hsla(0, 0%, 0%, 0.2);
 
     word-break: break-all;
     /*    word-wrap: break-word; 을 적용하면 url의 경우 -다음에 긴 문자가 나올 시 사이 공백이 크게 들어가기도 한다.
@@ -114,7 +114,7 @@ h2 {
 
     }
 
-    .meaning.off {
+    article.off {
     	background-color: #bbb;
     }
 
@@ -125,11 +125,10 @@ h2 {
     .bottom_of_meaning {
 		margin-top: 20px;
 		margin-bottom: 10px;
-		font-size: 0.8rem;
 	}
 
 	.source {
-		color: #9cc;
+		color: powderblue;
 		font-size:1rem;
 		text-align : left;
 
@@ -137,7 +136,7 @@ h2 {
 
 
    @media (max-width: 800px) {
-        ..meaning {
+        .article {
 
             background-color: #fff;
             background-image:
@@ -221,7 +220,7 @@ textarea {
 
 
 
-.meaning p {
+article p {
 	padding-left: 50px;
 	text-indent:4%;
 
