--- a/style.css
+++ b/style.css
@@ -24,6 +24,24 @@ body {
 
 }
 
+header {
+	border-bottom: #eb4 1px dotted;
+	padding:30px;
+	margin:0;
+	display:block;
+	text-align: center;
+    /*font-family: 'Noto Sans KR';*/
+}
+
+.header_bar {
+	background-color: #d3d3d336;
+	position: fixed;
+	top:0;
+	left:0;
+	right: 0;
+	text-align: right;
+}
+
 #content {
 	
 	display:grid;
@@ -56,14 +74,7 @@ body {
 
 
 
-header {
-	border-bottom: #eb4 1px dotted;
-	padding:30px;
-	margin:0;
-	display:block;
-	text-align: center;
-    /*font-family: 'Noto Sans KR';*/
-}
+
 
 h2 {
 	text-indent: 14px;
